--- a/client/src/components/VerifyForm/styles.css
+++ b/client/src/components/VerifyForm/styles.css
@@ -28,7 +28,7 @@
     border: none;
     font-size: 1rem;
     color:#FFFFFF;
-    max-width: 262px;
+    width: 100%;
 }
 
 .VerifyForm_buttonSelectContainer {
